Fix spacing

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ img {
   border-radius: 8px;
   box-sizing: border-box;
   margin: 2em 0;
-  padding: 24px 48px;
+  padding: 4px 48px 24px;
   text-align: center;
 }
 
